# BodyGestureGenerator

./: AxisanglePlayer.cs  CMakeLists.txt  README.md
ChoreoTransformer/: AxisanglePlayer.cs  AxisangleRecoder.cs  JointAngleController.cs  JointAngleController_v2.cs  QuaternionPlayer.cs  SMPLX.cs
MotionReader/: MocapDemonstrationController.cs  Player.cs  SMPLX.cs
MotionReader/TotalCapture/: README.md
MotionReader/TotalCapture/s1/: freestyle1_stageii_concat_trans_poses.csv  freestyle3_stageii_concat_trans_poses.csv
MotionReader/TotalCapture/s2/: female.txt  freestyle2_stageii_concat_trans_poses.csv
MotionReader/TotalCapture/s4/: freestyle1_stageii_concat_trans_poses.csv
MotionReader/TotalCapture_csv_concat_convert/: README.md
MotionReader/TotalCapture_csv_concat_convert/s1/: freestyle1_stageii_concat_root_body_pose.csv  freestyle2_stageii_concat_root_body_pose.csv  freestyle3_stageii_concat_root_body_pose.csv
MotionReader/TotalCapture_csv_concat_convert/s2/: freestyle2_stageii_concat_root_body_pose.csv
MotionReader/TotalCapture_csv_concat_convert/s4/: freestyle1_stageii_concat_root_body_pose.csv
MotionReader/npz convertor/: main.py
forms/: EventQtSlotConnect.ui  Mainwindow.ui  anatomicalinputs.ui  constraintprops.ui  jointsphere_Dialog.ui  motionsphere_dialog.ui  timerSettings_window.ui  unitmotion_integrationDialog.ui
include/: BVHparser.hpp  EventQtSlotConnect.h  MainWindow.h  Matrices.h  Quaternion.h  SphereUtility.h  Vectors.h  allHeaders.h  anatomicalinputs.h  constraintprops.h  jointsphere_Dialog.h  lerp.h  motionsphere_dialog.h  quaternion1.h  timerSettings_window.h  ui_EventQtSlotConnect.h  ui_anatomicalinputs.h  ui_constraintprops.h  ui_jointsphere_Dialog.h  ui_motionsphere_dialog.h  ui_timerSettings_window.h  ui_unitmotion_integrationDialog.h  unitmotion_integrationDialog.h
jy/: 01JointAngleController.cs  02JointAngleController.cs  AxisanglePlayer.cs  AxisangleRecoder.cs  JointAngleController.cs  JointAngleController_v2.cs  Player.cs  QuaternionPlayer.cs  SMPLX.cs
npcmake/: README.md
npcmake/onnx list/: Walker 2.onnx  Walker 3.onnx  Walker-10999980.onnx  Walker-10999980.pt  Walker-49999980.onnx  Walker-49999980.pt  Walker-94999000.onnx  Walker-99999000.onnx
npcmake/scripts/: Jump.yaml  JumpAgent.cs  Walker.yaml  WalkerAgent.cs  runagent.cs
src/: ;.cpp  BVHparser.cpp  EventQtSlotConnect.cpp  Mainwindow.cpp  Matrices.cpp  Quaternion.cpp  SphereUtility.cpp  anatomicalinputs.cpp  jointsphere_Dialog.cpp  lerp.cpp  main.cpp  quaternion1.cpp
